# qosst-alice

./: .gitignore  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: schema_conversion_factor.drawio
docs/source/api/: alice.md  dsp.md  tools.md
docs/source/cli/: documentation.md  tools.md  understanding.md
docs/source/introduction/: functionalities.md  getting_started.md  usage.md
docs/source/pyplots/dsp/: generate_baseband_sequence.py  pilots.py  rrc.py  shift.py  upsample.py  zc.py  zeros.py
docs/source/understanding/: characterisation_conversion_factor.md  dsp.md  server.md
qosst_alice/: __init__.py  alice.py  dsp.py
qosst_alice/tools/: __init__.py  calibrate_conversion_factor.py  charaterization_voa.py  commands.py
