[tool.poetry]
name = "qosst-alice"
version = "0.10.0"
description = "Alice submodule of QOSST, containing the server and DSP of Alice."
authors = [
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
    "Matteo Schiavon <Matteo.Schiavon@lip6.fr>",
]
packages = [{ include = "qosst_alice" }, { include = "qosst_alice/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-alice"
documentation = "https://qosst-alice.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qosst-core = "^0.10.0"
qosst-hal = "^0.10.0"


[tool.poetry.scripts]
qosst-alice = "qosst_alice.alice:main"
qosst-alice-tools = "qosst_alice.tools.commands:main"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.3.0"
docstr-coverage = "^2.2.0"
setuptools = "^67.6.1"
sphinx-argparse-cli = "^1.11.0"
sphinx-prompt = "^1.5.0"
myst-parser = "^1.0.0"
sphinxcontrib-programoutput = "^0.17"
matplotlib = "^3.5.1"
scipy = [
    { version = "^1.7", python = ">=3.7, <3.8" },
    { version = "^1.10", python = ">=3.8, <3.12" },
]
pylint = "^2.17.4"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
